main/default/objects/pharos__Limits__c/fields/pharos__ActiveScratchOrgs__c.field-meta.xml
<CustomField>
    <fullName>pharos__ActiveScratchOrgs__c</fullName>
    <label>Active Scratch Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>