main/default/objects/pharos__Limits__c/fields/pharos__AnalyticsExternalDataSizeMB__c.field-meta.xml
<CustomField>
    <fullName>pharos__AnalyticsExternalDataSizeMB__c</fullName>
    <label>Analytics External Data Size MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>