main/default/objects/pharos__Limits__c/fields/pharos__ConcurrentAsyncGetReportInstances__c.field-meta.xml
<CustomField>
    <fullName>pharos__ConcurrentAsyncGetReportInstances__c</fullName>
    <label>Concurrent Async Get Report Instances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>