main/default/objects/pharos__Limits__c/fields/pharos__ConcurrentEinsteinDataInsightsStory__c.field-meta.xml
<CustomField>
    <fullName>pharos__ConcurrentEinsteinDataInsightsStory__c</fullName>
    <label>Concurrent Einstein Data Insights Story</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>