main/default/objects/pharos__Limits__c/fields/pharos__ConcurrentEinsteinDiscoveryStory__c.field-meta.xml
<CustomField>
    <fullName>pharos__ConcurrentEinsteinDiscoveryStory__c</fullName>
    <label>Concurrent Einstein Discovery Story</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>