main/default/objects/pharos__Limits__c/fields/pharos__ConcurrentSyncReportRuns__c.field-meta.xml
<CustomField>
    <fullName>pharos__ConcurrentSyncReportRuns__c</fullName>
    <label>Concurrent Sync Report Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>