main/default/objects/pharos__Limits__c/fields/pharos__CreateCustom__c.field-meta.xml
<CustomField>
    <fullName>pharos__CreateCustom__c</fullName>
    <label>Create Custom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>