main/default/objects/pharos__Limits__c/fields/pharos__DailyAnalyticsDataflowJobExecutions__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyAnalyticsDataflowJobExecutions__c</fullName>
    <label>Daily Analytics Dataflow Job Executions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>