main/default/objects/pharos__Limits__c/fields/pharos__DailyAnalyticsUploadedFilesSizeMB__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyAnalyticsUploadedFilesSizeMB__c</fullName>
    <label>Daily Analytics Uploaded Files Size MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>