main/default/objects/pharos__Limits__c/fields/pharos__DailyApiRequests__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyApiRequests__c</fullName>
    <label>Daily Api Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>