main/default/objects/pharos__Limits__c/fields/pharos__DailyAsyncApexExecutions__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyAsyncApexExecutions__c</fullName>
    <label>Daily Async Apex Executions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>