main/default/objects/pharos__Limits__c/fields/pharos__DailyBulkApiBatches__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyBulkApiBatches__c</fullName>
    <label>Daily Bulk Api Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>