main/default/objects/pharos__Limits__c/fields/pharos__DailyDeliveredPlatformEvents__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyDeliveredPlatformEvents__c</fullName>
    <label>Daily Delivered Platform Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>