main/default/objects/pharos__Limits__c/fields/pharos__DailyDurableGenericStreamingApiEvents__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyDurableGenericStreamingApiEvents__c</fullName>
    <label>Daily Durable Generic Streaming Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>