main/default/objects/pharos__Limits__c/fields/pharos__DailyDurableStreamingApiEvents__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyDurableStreamingApiEvents__c</fullName>
    <label>Daily Durable Streaming Api Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>