main/default/objects/pharos__Limits__c/fields/pharos__DailyEinsteinDataInsightsStoryCreation__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyEinsteinDataInsightsStoryCreation__c</fullName>
    <label>Daily Einstein Data Insights Story</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>