main/default/objects/pharos__Limits__c/fields/pharos__DailyEinsteinDiscoveryOptJobRuns__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyEinsteinDiscoveryOptJobRuns__c</fullName>
    <label>Daily Einstein Discovery Opt Job Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>