main/default/objects/pharos__Limits__c/fields/pharos__DailyEinsteinDiscoveryPredictAPICalls__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyEinsteinDiscoveryPredictAPICalls__c</fullName>
    <label>Daily Einstein Discovery Predict Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>