main/default/objects/pharos__Limits__c/fields/pharos__DailyEinsteinDiscoveryPredictionsByCDC__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyEinsteinDiscoveryPredictionsByCDC__c</fullName>
    <label>Daily Einstein Discovery Predictions CDC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>