main/default/objects/pharos__Limits__c/fields/pharos__DailyEinsteinDiscoveryStoryCreation__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyEinsteinDiscoveryStoryCreation__c</fullName>
    <label>Daily Einstein Discovery Story Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>