main/default/objects/pharos__Limits__c/fields/pharos__DailyFunctionsApiCallLimit__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyFunctionsApiCallLimit__c</fullName>
    <label>Daily Functions Api Call Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>