main/default/objects/pharos__Limits__c/fields/pharos__DailyGenericStreamingApiEvents__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyGenericStreamingApiEvents__c</fullName>
    <label>Daily Generic Streaming Api Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>