main/default/objects/pharos__Limits__c/fields/pharos__DailyMetadataRetrievesWithDeps__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyMetadataRetrievesWithDeps__c</fullName>
    <label>Daily Metadata Retrieves With Deps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>