main/default/objects/pharos__Limits__c/fields/pharos__DailyScratchOrgs__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyScratchOrgs__c</fullName>
    <label>Daily Scratch Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>