main/default/objects/pharos__Limits__c/fields/pharos__DailyStandardVolumePlatformEvents__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyStandardVolumePlatformEvents__c</fullName>
    <label>Daily Standard Volume Platform Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>