main/default/objects/pharos__Limits__c/fields/pharos__DailyStreamingApiEvents__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyStreamingApiEvents__c</fullName>
    <label>Daily Streaming Api Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>