main/default/objects/pharos__Limits__c/fields/pharos__DailyWorkflowEmails__c.field-meta.xml
<CustomField>
    <fullName>pharos__DailyWorkflowEmails__c</fullName>
    <label>Daily Workflow Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>