main/default/objects/pharos__Limits__c/fields/pharos__DataStorageMB__c.field-meta.xml
<CustomField>
    <fullName>pharos__DataStorageMB__c</fullName>
    <label>Data Storage MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>