main/default/objects/pharos__Limits__c/fields/pharos__DurableStreamingApiConcurrentClients__c.field-meta.xml
<CustomField>
    <fullName>pharos__DurableStreamingApiConcurrentClients__c</fullName>
    <label>Durable Streaming Api Concurrent Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>