main/default/objects/pharos__Limits__c/fields/pharos__FileStorageMB__c.field-meta.xml
<CustomField>
    <fullName>pharos__FileStorageMB__c</fullName>
    <label>File Storage MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>