main/default/objects/pharos__Limits__c/fields/pharos__HourlyAsyncReportRuns__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyAsyncReportRuns__c</fullName>
    <label>Hourly Async Report Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>