main/default/objects/pharos__Limits__c/fields/pharos__HourlyDashboardRefreshes__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyDashboardRefreshes__c</fullName>
    <label>Hourly Dashboard Refreshes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>