main/default/objects/pharos__Limits__c/fields/pharos__HourlyDashboardResults__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyDashboardResults__c</fullName>
    <label>Hourly Dashboard Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>