main/default/objects/pharos__Limits__c/fields/pharos__HourlyDashboardStatuses__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyDashboardStatuses__c</fullName>
    <label>Hourly Dashboard Statuses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>