main/default/objects/pharos__Limits__c/fields/pharos__HourlyManagedContentPublicRequests__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyManagedContentPublicRequests__c</fullName>
    <label>Hourly Managed Content Public Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>