main/default/objects/pharos__Limits__c/fields/pharos__HourlyODataCallout__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyODataCallout__c</fullName>
    <label>Hourly OData Callout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>