main/default/objects/pharos__Limits__c/fields/pharos__HourlyPublishedPlatformEvents__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyPublishedPlatformEvents__c</fullName>
    <label>Hourly Published Platform Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>