main/default/objects/pharos__Limits__c/fields/pharos__HourlyPubStdVolPlatformEvents__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyPubStdVolPlatformEvents__c</fullName>
    <label>Hourly Pub Std Vol Platform Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>