main/default/objects/pharos__Limits__c/fields/pharos__HourlyShortTermIdMapping__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyShortTermIdMapping__c</fullName>
    <label>Hourly Short Term Id Mapping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>