main/default/objects/pharos__Limits__c/fields/pharos__HourlySyncReportRuns__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlySyncReportRuns__c</fullName>
    <label>Hourly Sync Report Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>