main/default/objects/pharos__Limits__c/fields/pharos__HourlyTimeBasedWorkflow__c.field-meta.xml
<CustomField>
    <fullName>pharos__HourlyTimeBasedWorkflow__c</fullName>
    <label>Hourly Time Based Workflow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>