main/default/objects/pharos__Limits__c/fields/pharos__MassEmail__c.field-meta.xml
<CustomField>
    <fullName>pharos__MassEmail__c</fullName>
    <label>Mass Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>