main/default/objects/pharos__Limits__c/fields/pharos__MonthlyEinsteinDiscoveryStoryCreation__c.field-meta.xml
<CustomField>
    <fullName>pharos__MonthlyEinsteinDiscoveryStoryCreation__c</fullName>
    <label>Monthly Einstein Discovery Story</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>