main/default/objects/pharos__Limits__c/fields/pharos__MonthlyPlatformEventsUsageEntitlement__c.field-meta.xml
<CustomField>
    <fullName>pharos__MonthlyPlatformEventsUsageEntitlement__c</fullName>
    <description>Monthly Platform Events Usage Entitlement limit</description>
    <label>Monthly Platform Events Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>