main/default/objects/pharos__Limits__c/fields/pharos__Package2VersionCreatesWithoutValidation__c.field-meta.xml
<CustomField>
    <fullName>pharos__Package2VersionCreatesWithoutValidation__c</fullName>
    <label>Package2 Version Creates No Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>