main/default/objects/pharos__Limits__c/fields/pharos__PermissionSets__c.field-meta.xml
<CustomField>
    <fullName>pharos__PermissionSets__c</fullName>
    <label>Permission Sets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>