main/default/objects/pharos__Limits__c/fields/pharos__PlatformEventTriggersParallel__c.field-meta.xml
<CustomField>
    <fullName>pharos__PlatformEventTriggersParallel__c</fullName>
    <label>Platform Event Triggers Parallel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>