main/default/objects/pharos__Limits__c/fields/pharos__PrivateConnectOutboundCalloutMB__c.field-meta.xml
<CustomField>
    <fullName>pharos__PrivateConnectOutboundCalloutMB__c</fullName>
    <label>Private Connect Outbound Callout MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>