main/default/objects/pharos__Limits__c/fields/pharos__SingleEmail__c.field-meta.xml
<CustomField>
    <fullName>pharos__SingleEmail__c</fullName>
    <label>Single Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>