main/default/objects/pharos__Limits__c/fields/pharos__StreamingApiConcurrentClients__c.field-meta.xml
<CustomField>
    <fullName>pharos__StreamingApiConcurrentClients__c</fullName>
    <label>Streaming Api Concurrent Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>